2009-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Call get_keyfile_wordchars() in highlighting_init_styles().


2009-08-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.ada:
   Add missing file.
 * src/keybindings.c:
   Switching notebook tabs now works for the currently used notebook
   widget instead of always using the documents notebook.
 * src/document.c, src/document.h, src/documentprivate.h,
   doc/plugins.dox:
   Small corrections to some API docs.


2009-08-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c, src/win32.h, src/win32.c:
   Expand system environment variables (%variableName%) on Windows when
   running Build commands.


2009-07-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Rename 'Reflow lines/paragraph' to 'Reflow lines/block' because in
   future using an indent block is more useful e.g. for ChangeLog
   files.
 * scintilla/LexMarkdown.cxx, scintilla/makefile.win32,
   scintilla/include/SciLexer.h, scintilla/include/Scintilla.iface,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
   tagmanager/parsers.h, tagmanager/makefile.win32,
   tagmanager/markdown.c, tagmanager/Makefile.am, wscript:
   Add Markdown filetype (patch by Jon Strait, thanks).
 * src/pluginprivate.h, src/pluginutils.c, src/plugins.c:
   Fix disconnecting plugin signal id when not using geany_object.
 * src/filetypes.c:
   Add filetype_make_title() instead of using:
   ft->title = g_strdup_printf(_("%s source file"), ft->name);
   It also supports "%s file" strings.


2009-07-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/pluginprivate.h, src/utils.h, src/plugindata.h,
   src/stash.c, src/pluginutils.c, src/plugins.c, src/pluginutils.h,
   doc/pluginsymbols.c, doc/plugins.dox, plugins/geanyfunctions.h,
   plugins/filebrowser.c: