@@ -1,3 +1,12 @@
+2009-08-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/templates.c, src/highlighting.c, src/dialogs.c, src/filetypes.c,
+   src/filetypes.h, src/document.c, src/symbols.c:
+   Support adding custom filetype files e.g. filetype.Foo.conf. (Only
+   tested with empty file so far).
+   Allow GeanyFiletype::extension to be NULL.
+
+
 2009-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/highlighting.c:
